force-app/main/default/objects/Species__c/fields/Blooming__c.field-meta.xml
<CustomField>
    <fullName>Blooming__c</fullName>
    <label>Blooming Notes</label>
    <type>TextArea</type>
</CustomField>