force-app/main/default/objects/Species__c/fields/Harvesting__c.field-meta.xml
<CustomField>
    <fullName>Harvesting__c</fullName>
    <label>Harvesting After Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>