force-app/main/default/objects/Species__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Edible</fullName>
                <default>true</default>
                <label>Edible</label>
            </value>
            <value>
                <fullName>Ornamentario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>