force-app/main/default/objects/Species__c/validationRules/Blank_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Blank_value</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Description__c == null ,true,false)</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>You can&apos;t leave the description empty</errorMessage>
</ValidationRule>